[gd_scene load_steps=5 format=3 uid="uid://xya7y3xsi1vn"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_k5158"]
[ext_resource type="Resource" uid="uid://cwonxj6cvvbje" path="res://Player/defaultPlayerMovement.tres" id="2_jlj0t"]
[ext_resource type="SpriteFrames" uid="uid://5i7j226jtuqe" path="res://Player/playerGreen.tres" id="3_oleom"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a6lar"]
size = Vector2(16, 22.5)

[node name="Player" type="CharacterBody2D"]
z_index = 10
collision_layer = 2
script = ExtResource("1_k5158")
moveData = ExtResource("2_jlj0t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("3_oleom")
animation = &"run"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.75)
shape = SubResource("RectangleShape2D_a6lar")

[node name="LadderCheck" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(0, 18)
collide_with_areas = true
collide_with_bodies = false

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DelayJumpTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath(".")
update_rotation = false
update_scale = false

[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="DelayJumpTimer" to="." method="_on_delay_jump_timer_timeout"]
